--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-hadiza
-mongodb+srv://mohammedhardeeza:hadiza@cluster0.98vseka.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://mohammedhardeeza:hadiza@cluster0.98vseka.mongodb.net/
